--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sdl2 = "0.30.0"
-rand = "0.5.0"
+ggez = "0.5.1"
